crates/ssa-workflow-derive/tests/ui/enum.stderr
error: CanonicalEncode can only be derived for unit enum variants
 --> tests/ui/enum.rs:6:5
  |
6 |     A(u8),
  |     ^
